// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Footer Footer 1`] = `
<div
  className="footer"
>
  <div
    className="row"
    style={
      Object {
        "fontSize": ".8rem",
        "padding": ".25rem",
        "paddingTop": "1rem",
      }
    }
  >
    <div
      className="mx-auto text-center col-md-10"
    >
      Copyright © 2020 ~ NERACOOS
    </div>
  </div>
  <div
    className="row"
    style={
      Object {
        "fontSize": ".8rem",
        "padding": ".25rem",
      }
    }
  >
    <div
      className="mx-auto text-center col-md-10"
    >
      Product of 
      <a
        href="http://www.neracoos.org/"
      >
        NERACOOS.org
      </a>
       - Developed by the
       
      <a
        href="https://www.gmri.org/our-work/research/our-approach/ocean-data"
      >
        Gulf of Maine Research Institute Ocean Data Products Team
      </a>
    </div>
  </div>
  <div
    className="row"
    style={
      Object {
        "fontSize": ".8rem",
        "marginBottom": "1rem",
        "marginTop": "1rem",
        "padding": ".25rem",
      }
    }
  >
    <div
      className="mx-auto text-center col-md-10"
    >
      <a
        href="http://neracoos.org"
        style={
          Object {
            "paddingRight": "1rem",
          }
        }
      >
        <img
          alt="NERACOOS"
          src="NERACOOS_horizontal_logo_acronym title_yellowline.png"
          style={
            Object {
              "height": "80px",
              "margin": ".2rem",
              "marginRight": ".5rem",
            }
          }
          title="NERACOOS"
        />
      </a>
      <a
        href="https://www.gmri.org/our-work/research/our-approach/ocean-data"
      >
        <img
          alt="Gulf of Maine Research Institute"
          src="gmri.jpg"
          style={
            Object {
              "height": "80px",
              "margin": ".2rem",
              "marginRight": ".5rem",
            }
          }
          title="Gulf of Maine Research Institute"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|NavBar Nav Bar 1`] = `
<div>
  <nav
    className="navbar navbar-expand-md navbar-dark"
  >
    <a
      className="navbar-brand"
      href="/"
      onClick={[Function]}
    >
      <img
        alt="NERACOOS"
        src="http://www.neracoos.org/sites/neracoos.org/files/NERACOOS_logo_white_300x43.png"
      />
    </a>
    <button
      aria-label="Toggle navigation"
      className="navbar-toggler"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      style={Object {}}
    >
      <ul
        className="ml-auto navbar-nav"
      >
        <a
          aria-current="page"
          className="nav-link active"
          href="/"
          onClick={[Function]}
          style={Object {}}
        >
          Home
        </a>
        <li
          className="dropdown nav-item"
          onKeyDown={[Function]}
        >
          <a
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle nav-link"
            href="#"
            onClick={[Function]}
          >
            Regions
          </a>
          <div
            aria-hidden={true}
            className="dropdown-menu dropdown-menu-right"
            role="menu"
            tabIndex="-1"
          >
            <a
              aria-current={null}
              className="nav-link dropdown-item btn"
              href="/platform/?region=GOM"
              onClick={[Function]}
            >
              Gulf Of Maine
            </a>
            <a
              aria-current={null}
              className="nav-link dropdown-item btn"
              href="/platform/?region=LONG"
              onClick={[Function]}
            >
              Long Island Sound
            </a>
            <a
              aria-current={null}
              className="nav-link dropdown-item btn"
              href="/platform/?region=GREAT"
              onClick={[Function]}
            >
              Great Bay, NH
            </a>
            <a
              aria-current={null}
              className="nav-link dropdown-item btn"
              href="/platform/?region=BOSTON"
              onClick={[Function]}
            >
              Boston Harbor
            </a>
            <a
              aria-current={null}
              className="nav-link dropdown-item btn"
              href="/platform/?region=CAPE"
              onClick={[Function]}
            >
              Cape Cod / Buzzards Bay
            </a>
            <a
              aria-current={null}
              className="nav-link dropdown-item btn"
              href="/platform/?region=NARRAGANSETT"
              onClick={[Function]}
            >
              Narragansett Bay
            </a>
            <a
              aria-current={null}
              className="nav-link dropdown-item btn"
              href="/platform/?region=NEWFOUNDLAND"
              onClick={[Function]}
            >
              Newfoundland
            </a>
          </div>
        </li>
        <li
          className="nav-item"
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/about"
            onClick={[Function]}
          >
            About
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Storyshots ERDDAP|CurrentConditions/Configurable Configurable 1`] = `
<div
  className="row"
>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/wind"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Winds
           - 4.6 Knots
          
           from NE
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        />
      </div>
    </a>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/air_temperature"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Air Temperature
           - 
          38.9
           
          Fahrenheit
           
          
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        >
          <div
            className="chart "
          />
        </div>
      </div>
    </a>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/barometric_pressure"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Barometric Pressure
           - 
          14.7
           
          psi
           
          
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        >
          <div
            className="chart "
          />
        </div>
      </div>
    </a>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/significant_wave_height"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Significant Wave Height
           - 
          5.2
           
          Feet
           
          
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        >
          <div
            className="chart "
          />
        </div>
      </div>
    </a>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/dominant_wave_period"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Dominant Wave Period
           - 
          6.3
           
          Seconds
           
          
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        >
          <div
            className="chart "
          />
        </div>
      </div>
    </a>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <div
      className="card"
    >
      <div
        className="card-body"
      >
        No data for 
        Water Temperature
         in the last day.
      </div>
    </div>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/visibility_in_air"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Visibility
           - 
          1.7
           
          Nautical Miles
           
           (1.9 miles)
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        >
          <div
            className="chart "
          />
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Storyshots ERDDAP|CurrentConditions/Configurable English 1`] = `
<div
  className="row"
>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/wind"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Winds
           - 4.6 Knots
          
           from NE
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        />
      </div>
    </a>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/air_temperature"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Air Temperature
           - 
          38.9
           
          Fahrenheit
           
          
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        >
          <div
            className="chart "
          />
        </div>
      </div>
    </a>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/barometric_pressure"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Barometric Pressure
           - 
          14.7
           
          psi
           
          
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        >
          <div
            className="chart "
          />
        </div>
      </div>
    </a>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/significant_wave_height"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Significant Wave Height
           - 
          5.2
           
          Feet
           
          
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        >
          <div
            className="chart "
          />
        </div>
      </div>
    </a>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/dominant_wave_period"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Dominant Wave Period
           - 
          6.3
           
          Seconds
           
          
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        >
          <div
            className="chart "
          />
        </div>
      </div>
    </a>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <div
      className="card"
    >
      <div
        className="card-body"
      >
        No data for 
        Water Temperature
         in the last day.
      </div>
    </div>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/visibility_in_air"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Visibility
           - 
          1.7
           
          Nautical Miles
           
           (1.9 miles)
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        >
          <div
            className="chart "
          />
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Storyshots ERDDAP|CurrentConditions/Configurable Metric 1`] = `
<div
  className="row"
>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/wind"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Winds
           - 2.4 Meters/Second
          
           from NE
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        />
      </div>
    </a>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/air_temperature"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Air Temperature
           - 
          3.9
           
          Celsius
           
          
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        >
          <div
            className="chart "
          />
        </div>
      </div>
    </a>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/barometric_pressure"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Barometric Pressure
           - 
          1012.9
           
          hPa
           
          
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        >
          <div
            className="chart "
          />
        </div>
      </div>
    </a>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/significant_wave_height"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Significant Wave Height
           - 
          1.6
           
          Meters
           
          
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        >
          <div
            className="chart "
          />
        </div>
      </div>
    </a>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/dominant_wave_period"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Dominant Wave Period
           - 
          6.3
           
          Seconds
           
          
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        >
          <div
            className="chart "
          />
        </div>
      </div>
    </a>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <div
      className="card"
    >
      <div
        className="card-body"
      >
        No data for 
        Water Temperature
         in the last day.
      </div>
    </div>
  </div>
  <div
    className="col-sm-6 col-md-4"
    style={
      Object {
        "paddingTop": "1rem",
      }
    }
  >
    <a
      href="/platform/M01/observations/visibility_in_air"
      onClick={[Function]}
    >
      <div
        className="card"
      >
        <div
          className="card-header"
        >
          Visibility
           - 
          3
           
          Kilometers
           
           (1.9 miles)
        </div>
        <div
          className="card-body"
          style={
            Object {
              "padding": ".2rem",
            }
          }
        >
          <div
            className="chart "
          />
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Storyshots ERDDAP|CurrentConditions/Data Card Configurable 1`] = `
<div
  className="col-sm-6 col-md-4"
  style={
    Object {
      "paddingTop": "1rem",
    }
  }
>
  <a
    href="/platform/M01/observations/significant_wave_height"
    onClick={[Function]}
  >
    <div
      className="card"
    >
      <div
        className="card-header"
      >
        Significant Wave Height
         - 
        5.2
         
        Feet
         
        
      </div>
      <div
        className="card-body"
        style={
          Object {
            "padding": ".2rem",
          }
        }
      >
        <div
          className="chart "
        />
      </div>
    </div>
  </a>
</div>
`;

exports[`Storyshots ERDDAP|Forecast/Configurable Configurable 1`] = `
<div
  className="chart "
/>
`;

exports[`Storyshots ERDDAP|Forecast/Configurable English 1`] = `
<div
  className="chart "
/>
`;

exports[`Storyshots ERDDAP|Forecast/Configurable Metric 1`] = `
<div
  className="chart "
/>
`;

exports[`Storyshots ERDDAP|Info/Panel Platform Info 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <div
      className="card-title"
    >
      Station 
      M01
    </div>
    <p
      className="card-text"
    >
      Jordan Basin
      <br />
      <b>
        Lat:
      </b>
       
      43.5
       
      <b>
        Lon:
      </b>
       
      -67.87
      <br />
      <a
        href="http://gyre.umeoce.maine.edu/gomoos.php"
      >
        University of Maine
      </a>
      <br />
    </p>
  </div>
</div>
`;

exports[`Storyshots ERDDAP|ObservationTable/All Configurable 1`] = `
<ul
  className="list-group"
  style={
    Object {
      "paddingTop": "1rem",
    }
  }
>
  <li
    className="list-group-item"
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Last updated at: 
    </b>
     
    2/4/2020, 12:59:59 PM
  </li>
  <a
    className="list-group-item"
    href="/platform/M01/observations/air_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Air Temperature
      :
    </b>
     
    38.9
     
    Fahrenheit
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/barometric_pressure"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Barometric Pressure
      :
    </b>
     
    14.7
     
    psi
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_electrical_conductivity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Conductivity @ 1m
      :
    </b>
     
    31
     
    siemens/m
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_electrical_conductivity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Conductivity @ 50m
      :
    </b>
     
    31
     
    siemens/m
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_electrical_conductivity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Conductivity @ 100m
      :
    </b>
     
    31
     
    siemens/m
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/direction_of_sea_water_velocity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Current Direction
      :
    </b>
     
    290.9
     
    Angular Degrees
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_velocity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Current Speed
      :
    </b>
     
    0.4
     
    Knots
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/dominant_wave_period"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Dominant Wave Period
      :
    </b>
     
    6.3
     
    Seconds
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/max_wave_height"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Maximum Wave Height
      :
    </b>
     
    7.4
     
    Feet
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_salinity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Salinity @ 1m
      :
    </b>
     
    32
     
    PSU
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_salinity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Salinity @ 50m
      :
    </b>
     
    32
     
    PSU
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_salinity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Salinity @ 100m
      :
    </b>
     
    32
     
    PSU
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_density"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Sigma-T @ 1m
      :
    </b>
     
    25.3
     
    Kilograms per cubic meter
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_density"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Sigma-T @ 50m
      :
    </b>
     
    25.3
     
    Kilograms per cubic meter
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_density"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Sigma-T @ 100m
      :
    </b>
     
    25.3
     
    Kilograms per cubic meter
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/significant_wave_height"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Significant Wave Height
      :
    </b>
     
    4.6
     
    Feet
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/visibility_in_air"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Visibility
      :
    </b>
     
    1.7
     
    Nautical Miles
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Water Temperature
      :
    </b>
     
    46.1
     
    Fahrenheit
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Water Temperature @ 1m
      :
    </b>
     
    46.1
     
    Fahrenheit
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Water Temperature @ 50m
      :
    </b>
     
    46.1
     
    Fahrenheit
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Water Temperature @ 100m
      :
    </b>
     
    46.1
     
    Fahrenheit
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/wind_from_direction"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wind Direction
      :
    </b>
     
    NE
     
    Cardinal Direction
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/wind_speed_of_gust"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wind Gust
      :
    </b>
     
    6.5
     
    Knots
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/wind_speed"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wind Speed
      :
    </b>
     
    4.6
     
    Knots
  </a>
</ul>
`;

exports[`Storyshots ERDDAP|ObservationTable/All English 1`] = `
<ul
  className="list-group"
  style={
    Object {
      "paddingTop": "1rem",
    }
  }
>
  <li
    className="list-group-item"
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Last updated at: 
    </b>
     
    2/4/2020, 12:59:59 PM
  </li>
  <a
    className="list-group-item"
    href="/platform/M01/observations/air_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Air Temperature
      :
    </b>
     
    38.9
     
    Fahrenheit
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/barometric_pressure"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Barometric Pressure
      :
    </b>
     
    14.7
     
    psi
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_electrical_conductivity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Conductivity @ 1m
      :
    </b>
     
    31
     
    siemens/m
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_electrical_conductivity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Conductivity @ 50m
      :
    </b>
     
    31
     
    siemens/m
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_electrical_conductivity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Conductivity @ 100m
      :
    </b>
     
    31
     
    siemens/m
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/direction_of_sea_water_velocity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Current Direction
      :
    </b>
     
    290.9
     
    Angular Degrees
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_velocity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Current Speed
      :
    </b>
     
    0.4
     
    Knots
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/dominant_wave_period"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Dominant Wave Period
      :
    </b>
     
    6.3
     
    Seconds
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/max_wave_height"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Maximum Wave Height
      :
    </b>
     
    7.4
     
    Feet
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_salinity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Salinity @ 1m
      :
    </b>
     
    32
     
    PSU
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_salinity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Salinity @ 50m
      :
    </b>
     
    32
     
    PSU
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_salinity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Salinity @ 100m
      :
    </b>
     
    32
     
    PSU
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_density"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Sigma-T @ 1m
      :
    </b>
     
    25.3
     
    Kilograms per cubic meter
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_density"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Sigma-T @ 50m
      :
    </b>
     
    25.3
     
    Kilograms per cubic meter
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_density"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Sigma-T @ 100m
      :
    </b>
     
    25.3
     
    Kilograms per cubic meter
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/significant_wave_height"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Significant Wave Height
      :
    </b>
     
    4.6
     
    Feet
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/visibility_in_air"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Visibility
      :
    </b>
     
    1.7
     
    Nautical Miles
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Water Temperature
      :
    </b>
     
    46.1
     
    Fahrenheit
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Water Temperature @ 1m
      :
    </b>
     
    46.1
     
    Fahrenheit
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Water Temperature @ 50m
      :
    </b>
     
    46.1
     
    Fahrenheit
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Water Temperature @ 100m
      :
    </b>
     
    46.1
     
    Fahrenheit
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/wind_from_direction"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wind Direction
      :
    </b>
     
    NE
     
    Cardinal Direction
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/wind_speed_of_gust"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wind Gust
      :
    </b>
     
    6.5
     
    Knots
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/wind_speed"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wind Speed
      :
    </b>
     
    4.6
     
    Knots
  </a>
</ul>
`;

exports[`Storyshots ERDDAP|ObservationTable/All Metric 1`] = `
<ul
  className="list-group"
  style={
    Object {
      "paddingTop": "1rem",
    }
  }
>
  <li
    className="list-group-item"
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Last updated at: 
    </b>
     
    2/4/2020, 12:59:59 PM
  </li>
  <a
    className="list-group-item"
    href="/platform/M01/observations/air_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Air Temperature
      :
    </b>
     
    3.9
     
    Celsius
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/barometric_pressure"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Barometric Pressure
      :
    </b>
     
    1012.9
     
    hPa
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_electrical_conductivity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Conductivity @ 1m
      :
    </b>
     
    31
     
    siemens/m
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_electrical_conductivity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Conductivity @ 50m
      :
    </b>
     
    31
     
    siemens/m
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_electrical_conductivity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Conductivity @ 100m
      :
    </b>
     
    31
     
    siemens/m
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/direction_of_sea_water_velocity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Current Direction
      :
    </b>
     
    290.9
     
    Angular Degrees
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_velocity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Current Speed
      :
    </b>
     
    0.2
     
    Meters/Second
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/dominant_wave_period"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Dominant Wave Period
      :
    </b>
     
    6.3
     
    Seconds
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/max_wave_height"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Maximum Wave Height
      :
    </b>
     
    2.3
     
    Meters
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_salinity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Salinity @ 1m
      :
    </b>
     
    32
     
    PSU
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_salinity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Salinity @ 50m
      :
    </b>
     
    32
     
    PSU
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_salinity"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Salinity @ 100m
      :
    </b>
     
    32
     
    PSU
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_density"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Sigma-T @ 1m
      :
    </b>
     
    25.3
     
    Kilograms per cubic meter
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_density"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Sigma-T @ 50m
      :
    </b>
     
    25.3
     
    Kilograms per cubic meter
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_density"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Sigma-T @ 100m
      :
    </b>
     
    25.3
     
    Kilograms per cubic meter
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/significant_wave_height"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Significant Wave Height
      :
    </b>
     
    1.4
     
    Meters
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/visibility_in_air"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Visibility
      :
    </b>
     
    3
     
    Kilometers
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Water Temperature
      :
    </b>
     
    7.8
     
    Celsius
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Water Temperature @ 1m
      :
    </b>
     
    7.8
     
    Celsius
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Water Temperature @ 50m
      :
    </b>
     
    7.8
     
    Celsius
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Water Temperature @ 100m
      :
    </b>
     
    7.8
     
    Celsius
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/wind_from_direction"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wind Direction
      :
    </b>
     
    44.5
     
    Degrees
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/wind_speed_of_gust"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wind Gust
      :
    </b>
     
    3.4
     
    Meters/Second
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/wind_speed"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wind Speed
      :
    </b>
     
    2.4
     
    Meters/Second
  </a>
</ul>
`;

exports[`Storyshots ERDDAP|ObservationTable/Current Configurable 1`] = `
<ul
  className="list-group"
  style={
    Object {
      "paddingTop": "1rem",
    }
  }
>
  <li
    className="list-group-item"
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Last updated at:
    </b>
     
    2/4/2020, 12:59:59 PM
  </li>
  <a
    className="list-group-item"
    href="/platform/M01/observations/wind_speed"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wind Speed
      :
    </b>
     
    4.6
     
    Knots
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/wind_from_direction"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wind Direction
      :
    </b>
     
    NE
     
    Cardinal Direction
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/significant_wave_height"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wave Height
      :
    </b>
     
    4.6
     
    Feet
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/dominant_wave_period"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wave Period
      :
    </b>
     
    6.3
     
    Seconds
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/air_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Air Temperature
      :
    </b>
     
    38.9
     
    Fahrenheit
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Water Temperature
      :
    </b>
     
    46.1
     
    Fahrenheit
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/visibility_in_air"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Visibility
      :
    </b>
     
    1.7
     
    Nautical Miles
  </a>
  <li
    className="list-group-item"
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Unit system:
    </b>
     
    <i>
      Unit selector goes here
    </i>
  </li>
</ul>
`;

exports[`Storyshots ERDDAP|ObservationTable/Current English 1`] = `
<ul
  className="list-group"
  style={
    Object {
      "paddingTop": "1rem",
    }
  }
>
  <li
    className="list-group-item"
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Last updated at:
    </b>
     
    2/4/2020, 12:59:59 PM
  </li>
  <a
    className="list-group-item"
    href="/platform/M01/observations/wind_speed"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wind Speed
      :
    </b>
     
    4.6
     
    Knots
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/wind_from_direction"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wind Direction
      :
    </b>
     
    NE
     
    Cardinal Direction
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/significant_wave_height"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wave Height
      :
    </b>
     
    4.6
     
    Feet
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/dominant_wave_period"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wave Period
      :
    </b>
     
    6.3
     
    Seconds
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/air_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Air Temperature
      :
    </b>
     
    38.9
     
    Fahrenheit
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Water Temperature
      :
    </b>
     
    46.1
     
    Fahrenheit
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/visibility_in_air"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Visibility
      :
    </b>
     
    1.7
     
    Nautical Miles
  </a>
</ul>
`;

exports[`Storyshots ERDDAP|ObservationTable/Current Metric 1`] = `
<ul
  className="list-group"
  style={
    Object {
      "paddingTop": "1rem",
    }
  }
>
  <li
    className="list-group-item"
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Last updated at:
    </b>
     
    2/4/2020, 12:59:59 PM
  </li>
  <a
    className="list-group-item"
    href="/platform/M01/observations/wind_speed"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wind Speed
      :
    </b>
     
    2.4
     
    Meters/Second
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/wind_from_direction"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wind Direction
      :
    </b>
     
    44.5
     
    Degrees
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/significant_wave_height"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wave Height
      :
    </b>
     
    1.4
     
    Meters
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/dominant_wave_period"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Wave Period
      :
    </b>
     
    6.3
     
    Seconds
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/air_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Air Temperature
      :
    </b>
     
    3.9
     
    Celsius
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/sea_water_temperature"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Water Temperature
      :
    </b>
     
    7.8
     
    Celsius
  </a>
  <a
    className="list-group-item"
    href="/platform/M01/observations/visibility_in_air"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
        "padding": ".5rem",
        "paddingLeft": "1rem",
      }
    }
  >
    <b>
      Visibility
      :
    </b>
     
    3
     
    Kilometers
  </a>
</ul>
`;

exports[`Storyshots ERDDAP|ObservationTable/Item Configurable 1`] = `
<a
  className="list-group-item"
  href="/platform/M01/observations/wind_speed"
  onClick={[Function]}
  style={
    Object {
      "color": "black",
      "padding": ".5rem",
      "paddingLeft": "1rem",
    }
  }
>
  <b>
    Wind Speed
    :
  </b>
   
  4.6
   
  Knots
</a>
`;

exports[`Storyshots ERDDAP|ObservedCondition/Configurable Configurable 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <h4>
      Visibility
       
      
    </h4>
    <div
      className="chart "
    />
  </div>
</div>
`;

exports[`Storyshots ERDDAP|ObservedCondition/Configurable English 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <h4>
      Visibility
       
      
    </h4>
    <div
      className="chart "
    />
  </div>
</div>
`;

exports[`Storyshots ERDDAP|ObservedCondition/Configurable Metric 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <h4>
      Visibility
       
      
    </h4>
    <div
      className="chart "
    />
  </div>
</div>
`;

exports[`Storyshots ERDDAP|ObservedWindCondition Configurable 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <h4>
      Wind
    </h4>
  </div>
</div>
`;

exports[`Storyshots ERDDAP|ObservedWindCondition English 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <h4>
      Wind
    </h4>
  </div>
</div>
`;

exports[`Storyshots ERDDAP|ObservedWindCondition Metric 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <h4>
      Wind
    </h4>
  </div>
</div>
`;

exports[`Storyshots Units|UnitSelector/configurable Configurable 1`] = `
<div
  className="unit-selector btn-group"
  role="group"
>
  <button
    aria-label={null}
    className="btn btn-light btn-sm"
    id="Metric"
    onClick={[Function]}
    type="button"
  >
    Metric
  </button>
  <button
    aria-label={null}
    className="btn btn-primary btn-sm active"
    id="English"
    onClick={[Function]}
    type="button"
  >
    English
  </button>
</div>
`;

exports[`Storyshots Units|UnitSelector/configurable English 1`] = `
<div
  className="unit-selector btn-group"
  role="group"
>
  <button
    aria-label={null}
    className="btn btn-light btn-sm"
    id="Metric"
    onClick={[Function]}
    type="button"
  >
    Metric
  </button>
  <button
    aria-label={null}
    className="btn btn-primary btn-sm active"
    id="English"
    onClick={[Function]}
    type="button"
  >
    English
  </button>
</div>
`;

exports[`Storyshots Units|UnitSelector/configurable Metric 1`] = `
<div
  className="unit-selector btn-group"
  role="group"
>
  <button
    aria-label={null}
    className="btn btn-primary btn-sm active"
    id="Metric"
    onClick={[Function]}
    type="button"
  >
    Metric
  </button>
  <button
    aria-label={null}
    className="btn btn-light btn-sm"
    id="English"
    onClick={[Function]}
    type="button"
  >
    English
  </button>
</div>
`;
